fixed text overflow in people card

--- a/frontend/src/styles/components/PeopleCard.scss
+++ b/frontend/src/styles/components/PeopleCard.scss
@@ -1,5 +1,6 @@
 .people-card{
     position: relative;
+    width: 100%;
    
     border-radius: .3rem;
   
@@ -77,18 +78,20 @@
         
         background: rgba(0,0,0,.5);
         margin: .5rem  .5rem;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+      
        
         border-radius: .5rem;
 
         color: #fff;
-        text-align: center;
+       
         font-size: 1.3rem;
-        padding: .4rem;
+        padding: .4rem .8rem;
 
         box-shadow: 0 .1rem .3rem rgba(0,0,0,.4);
+        text-align: center;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
 
     }
 
