--- a/frontend/src/styles/components/PeopleList.scss
+++ b/frontend/src/styles/components/PeopleList.scss
@@ -17,7 +17,7 @@
 
     &__items{
         display: grid;
-        grid-template-columns: repeat(6, 1fr);
+        grid-template-columns: repeat(6, minmax(0, 1fr));
         gap: 1.5rem;
     }
 
